# threads-of-the-forgotten

./: .gitignore  Cargo.toml  README.md
crates/contracts/: Cargo.toml
crates/contracts/src/: agency.rs  api.rs  commands.rs  config.rs  economy.rs  events.rs  lib.rs  planning.rs  scheduler.rs  serde_u64_string.rs  snapshot.rs
crates/kernel-api/: Cargo.toml
crates/kernel-api/src/: lib.rs  persistence.rs  server.rs
crates/kernel-api/src/server/: error.rs  mod.rs  state.rs  tests.rs  util.rs
crates/kernel-api/src/server/routes/: control.rs  inspect.rs  mod.rs  query.rs  stream.rs
crates/kernel-cli/: Cargo.toml
crates/kernel-cli/src/: main.rs
crates/kernel-core/: Cargo.toml
crates/kernel-core/src/: agent.rs  drive.rs  economy.rs  institution.rs  lib.rs  memory.rs  operator.rs  perception.rs  planner.rs  scheduler.rs  social.rs  spatial.rs  world.rs
crates/kernel-core/src/world/: commands.rs  commit.rs  events.rs  helpers.rs  init.rs  inspect.rs  mod.rs  reactions.rs  snapshot.rs  step.rs  tests.rs
crates/kernel-core/tests/: npc_agency_properties.rs  validation_hardening.rs
observatory-web/: index.html  package-lock.json  package.json
observatory-web/src/: App.tsx  styles.css
scripts/: check-run-metrics.sh  inspect-run.sh  run-and-inspect.sh  run-fast-feedback.sh  run-kernel.sh  test.sh
