[package]
name = "kernel-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "kernel_api"
path = "src/lib.rs"

[dependencies]
contracts = { path = "../contracts" }
kernel-core = { path = "../kernel-core" }
axum = { version = "0.8", features = ["json", "ws"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync"] }
