[package]
name = "kernel-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "kernel-cli"
path = "src/main.rs"

[dependencies]
contracts = { path = "../contracts" }
kernel-api = { path = "../kernel-api" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
